[package]
name = "safescript-vm"
description = "Virtual Mashine for SafeScript"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies.common]
package = "safescript-common"
path = "../common"
