[package]
name = "safescript-parser"
description = "Parser for SafeScript"
version.workspace = true
authors.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true

[lib]
path = "lib.rs"

[dependencies.rubbernum]
package = "rubbernum"
path = "../rubbernum"

[dependencies.commoncore]
package = "safescript-common-core"
path = "../core"

[features]
nightly = ["rubbernum/nightly"]
std = ["rubbernum/std"]
